# GirlsOfSteelFRC

./: .bazelrc  .bazelrc-buildbuddy  .bazelversion  .gitattributes  .gitignore  .project  0001-Pretend-that-beta-releases-aren-t-beta.patch  0002-Pretend-that-last-years-pathplanner-is-for-2026.patch  2027TunerConstants.java  3rdParty_sb_widget_helper.gradle  BUILD.bazel  New Robot.yml  README.md  WORKSPACE  Wiring.html  Wiring.html~  build.gradle  copy.bara.sky  gos_vendordep_template.json  gradlew  requirements.txt  settings.gradle  styleguide.gradle  widget_helper.gradle
codelabs/basic_java/: BUILD.bazel  build.gradle
codelabs/basic_java/src/main/java/: Calculator.java  RunCalculator.java
codelabs/basic_java/src/test/java/: CalculatorTest.java
codelabs/basic_simulator/: BUILD.bazel  build.gradle  simgui.json
codelabs/basic_simulator/vendordeps/: SnobotSim.json
codelabs/custom_shuffleboard/: .gitignore  BUILD.bazel  build.gradle  dashboard.yml
codelabs/first_robot_code/: BUILD.bazel  First_Robot_Code_Agenda.txt  build.gradle
codelabs/first_robot_code/vendordeps/: REVLib.json  SnobotSim.json
codelabs/gitflow/: .gitignore  BUILD.bazel  build.gradle  simgui.json
codelabs/pid/: .gitignore  BUILD.bazel  build.gradle  imgui.ini  networktables.ini  networktables.json  simgui-ds.json  simgui.json
codelabs/pid/vendordeps/: REVLib.json  SnobotSim.json
libraries/DashboardGenerator/: BUILD.bazel  generate_dashboard.py  gui.py
libraries/DashboardGenerator/lib/: BUILD.bazel  dashboard_config.py  generate_shuffleboard.py  generate_webdash.py  template_helpers.py
libraries/DashboardGenerator/lib/templates/shuffleboard/: BUILD.bazel
libraries/DashboardGenerator/lib/templates/shuffleboard/dashboard_gen/: plugin_template.txt
libraries/DashboardGenerator/lib/templates/shuffleboard/java/: standalone_main_template.txt
libraries/DashboardGenerator/lib/templates/webdash/: component.jinja2  datatype.jinja2  renderer.jinja2  smart_dashboard_names.jinja2
libraries/DashboardGenerator/lib/ui/: BUILD.bazel  child_table_config.ui  field_config.ui  generate_config.ui  main_window_config.ui  shape_config.ui  subpanels.py  top_level_config.ui  widget_top_level_config.ui
libraries/GirlsOfSteelLib/: BUILD.bazel  build.gradle
libraries/GirlsOfSteelLib/.sysid/: sysid.json
libraries/GirlsOfSteelLibCtre/: BUILD.bazel  build.gradle
libraries/GirlsOfSteelLibNavx/: BUILD.bazel  build.gradle
libraries/GirlsOfSteelLibRev/: BUILD.bazel  build.gradle
libraries/ShuffleboardGenerator/: BUILD.bazel  generate_dashboard.py  gui.py
libraries/ShuffleboardGenerator/lib/: BUILD.bazel  generate_dashboard_structure.py  template_helpers.py
libraries/ShuffleboardGenerator/lib/templates/: BUILD.bazel
libraries/ShuffleboardGenerator/lib/templates/dashboard_gen/: plugin_template.txt
libraries/ShuffleboardGenerator/lib/templates/java/: standalone_main_template.txt
libraries/ShuffleboardGenerator/lib/templates/resources/: fxml_controller_template.txt  fxml_widget_template.txt
libraries/ShuffleboardGenerator/lib/ui/: BUILD.bazel  generate_config.ui  main_window_config.ui  shape_config.ui  shape_top_level_config.ui  subpanels.py  top_level_config.ui  widget_top_level_config.ui
libraries/scripts/datalog_parser/: BUILD.bazel  datalog.py  download_datalog_parser.py  load_log.py  utils.py
old_robots/LegacyLibraries/: BUILD.bazel  build.gradle
y2018/2018Beta/: .project  BUILD.bazel  CopyMotionProfileAndDeploy.launch  build.gradle
y2018/2018Beta/src/com/gos/steam_works/: GripPipeline.java  (+5 more)
y2018/2018Beta/util/: CANTalon.java
y2018/2018PowerUp/: BUILD.bazel  build.gradle
y2019/2019DeepSpace/: BUILD.bazel  build.gradle
y2019/2019DeepSpace/simulator_config/: joystick_config.properties
y2019/2019DeepSpace/snobotsim/: snobot_sim.gradle
y2019/OffenseBot/: BUILD.bazel  build.gradle
y2020/2020InfiniteRecharge/: BUILD.bazel  Limelight_Shooter_Zoom2x.vpr  build.gradle  default_imgui.ini
y2020/2020InfiniteRecharge/pathweaver/PathWeaver/Paths/: ControlPanelToAutoLine.path
y2020/2020InfiniteRecharge/simulator_config/: simulator_config.properties  simulator_config.yml
y2020/2020InfiniteRecharge/vendordeps/: SnobotSim.json
y2020/2020InfiniteRechargeDashboard/: BUILD.bazel  build.gradle  dashboard.yml  settings.gradle
y2020/Testboard/: BUILD.bazel  build.gradle
y2021/OutreachBot/: BUILD.bazel  build.gradle  gradlew.bat
y2021/OutreachBot/.sysid/: sysid-window.json
y2021/OutreachBot/vendordeps/: SnobotSim.json
y2022/CallistoRewrite/: BUILD.bazel  WPILib-License.md  build.gradle
y2022/CallistoRewrite/vendordeps/: SnobotSim.json
y2022/ChassisProject/: BUILD.bazel  ChassisProject.yaml  build.gradle
y2022/RapidReact/: .gitignore  BUILD.bazel  WPILib-License.md  build.gradle  dashboard.html  networktables.ini  simgui-ds.json  simgui.json
y2022/RapidReact/.sysid/: sysid.json
y2022/RapidReact/.wpilib/: wpilib_preferences.json
y2022/RapidReact/LimelightDetection2022/: BlueCargo.vpr  BlueCargoField.vpr  RedCargo.vpr  UpperHubTapeSensing  UpperHubTapeSensing.vpr  UpperHubTapeSensingWVROX
y2022/RapidReact/characterization/: chassis.json  config.json  pivot.json  shooter.json
y2022/RapidReact/characterization/results/chassis/: sysid_data20220303-190222.json  sysid_data20220312-100108.json  sysid_data20220313-155829.json  sysid_data20220324-192306.json
y2022/RapidReact/characterization/results/pivot/: sysid_data20220228-201725.json  sysid_data20220402-094838.json  sysid_data20220421-183228.json
y2022/RapidReact/log_analyzer/: make_plots.py
y2022/RapidReact/robot_preferences/: networktables.ini
y2022/RapidReact/shuffleboard/: real_shuffleboard.json
y2022/RapidReact/sysid/: chassisConfig
y2022/RapidReact/vendordeps/: SnobotSim.json
y2022/RapidReactDashboard/: BUILD.bazel  README.md  dashboard.yml
y2023/ChargedUpDashboard/: BUILD.bazel  build.gradle  dashboard.yml
y2023/Preseason/: .gitignore  BUILD.bazel  build.gradle  networktables.ini  simgui.json
y2023/Preseason/.sysid/: sysid.json
y2024/CrescendoDashboard/: BUILD.bazel  build.gradle  dashboard.yml
(+6803 files in other folders)
