load("//build_scripts/bazel:java_rules.bzl", "gos_java_binary", "gos_junit5_test")

gos_java_binary(
    name = "basic_java",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "com.gos.codelabs.basic_java.RunCalculator",
)

gos_junit5_test(
    name = "test",
    srcs = glob(["src/test/java/**/*.java"]),
    deps = ["basic_java"],
)
