load("//build_scripts/bazel:java_rules.bzl", "gos_java_binary")
load("//build_scripts/bazel/shuffleboard:shuffleboard_widget.bzl", "shuffleboard_widget")

shuffleboard_widget(
    name = "custom_shuffleboard",
    package = "com.gos.codelabs.shuffleboard.sd_widgets",
)

gos_java_binary(
    name = "Main",
    main_class = "com.gos.codelabs.shuffleboard.sd_widgets.ss.CodelabSuperStructureStandaloneMain",
    runtime_deps = [":custom_shuffleboard"],
)
