load("//build_scripts/bazel:java_rules.bzl", "gos_java_robot")

gos_java_robot(
    name = "first_robot_code",
    srcs = glob(["src/main/java/**/*.java"]),
    disable_pmd = True,
    main_class = "com.gos.codelabs.first_code_lab.Main",
    deps = [
        "@bazelrio//libraries/java/ctre/phoenix",
        "@bazelrio//libraries/java/rev/sparkmax",
        "@bazelrio//libraries/java/wpilib/new_commands",
        "@bazelrio//libraries/java/wpilib/wpilibj",
    ],
)
