load("//build_scripts/bazel:java_rules.bzl", "gos_java_robot")

gos_java_robot(
    name = "first_robot_code",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "com.gos.codelabs.first_code_lab.Main",
    deps = [
        "@bzlmodrio-allwpilib//libraries/java/wpilibj",
        "@bzlmodrio-phoenix//libraries/java/wpiapi-java",
    ],
)
