load("//build_scripts/bazel:java_rules.bzl", "gos_java_robot")

gos_java_robot(
    name = "gitflow",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "com.gos.codelabs.gitflow.Main",
    deps = [
        "@bzlmodrio-allwpilib//libraries/java/wpilibNewCommands",
        "@bzlmodrio-allwpilib//libraries/java/wpilibj",
    ],
)
