load("//build_scripts/bazel:java_rules.bzl", "gos_java_library")

gos_java_library(
    name = "GirlsOfSteelLib",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "@bazelrio//libraries/java/wpilib/wpilibj",
        "@bazelrio//libraries/java/wpilib/wpimath",
    ],
)
