load("//build_scripts/bazel:java_rules.bzl", "gos_java_library")

gos_java_library(
    name = "GirlsOfSteelLibCtre",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//libraries/GirlsOfSteelLib",
        "@bazelrio//libraries/java/ctre/phoenix",
    ],
)
