load("//build_scripts/bazel:java_rules.bzl", "gos_java_robot")

gos_java_robot(
    name = "2018PowerUp",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "com.gos.power_up.Main",
    deps = [
        "//libraries/GirlsOfSteelLib",
        "@bazelrio//libraries/java/ctre/phoenix",
        "@bazelrio//libraries/java/opencv",
        "@bazelrio//libraries/java/wpilib/cameraserver",
        "@bazelrio//libraries/java/wpilib/cscore",
        "@bazelrio//libraries/java/wpilib/old_commands",
        "@bazelrio//libraries/java/wpilib/wpilibj",
    ],
)
