load("//build_scripts/bazel:java_rules.bzl", "gos_java_robot")

gos_java_robot(
    name = "2020InfiniteRecharge",
    srcs = glob(["src/main/java/**/*.java"]),
    data = glob(["src/main/deploy/**"]),
    main_class = "com.gos.infinite_recharge.Main",
    deps = [
        "//libraries/GirlsOfSteelLib",
        "//libraries/GirlsOfSteelLibCtre",
        "//libraries/GirlsOfSteelLibNavx",
        "//libraries/GirlsOfSteelLibRev",
        "@bazelrio//libraries/java/ctre/phoenix",
        "@bazelrio//libraries/java/rev/colorsensor",
        "@bazelrio//libraries/java/rev/sparkmax",
        "@bazelrio//libraries/java/wpilib/cameraserver",
        "@bazelrio//libraries/java/wpilib/cscore",
        "@bazelrio//libraries/java/wpilib/new_commands",
        "@bazelrio//libraries/java/wpilib/ntcore",
        "@bazelrio//libraries/java/wpilib/wpilibj",
        "@bazelrio//libraries/java/wpilib/wpimath",
        "@snobot_sim//jar",
    ],
)
