load("//build_scripts/bazel:java_rules.bzl", "gos_java_binary")
load("//build_scripts/bazel/shuffleboard:shuffleboard_widget.bzl", "shuffleboard_widget")

shuffleboard_widget(
    name = "2020InfiniteRechargeDashboard",
    generation_config_file = ":dashboard.yml",
    package = "com.gos.infinite_recharge.sd_widgets",
)

gos_java_binary(
    name = "SuperStructureMain",
    main_class = "com.gos.infinite_recharge.sd_widgets.super_structure.SuperStructureStandaloneMain",
    runtime_deps = [":2020InfiniteRechargeDashboard"],
)

gos_java_binary(
    name = "LedsMain",
    main_class = "com.gos.infinite_recharge.sd_widgets.leds.LedStandaloneMain",
    runtime_deps = [":2020InfiniteRechargeDashboard"],
)

gos_java_binary(
    name = "ControlPanelMain",
    main_class = "com.gos.infinite_recharge.sd_widgets.control_panel.ControlPanelStandaloneMain",
    runtime_deps = [":2020InfiniteRechargeDashboard"],
)
