load("//build_scripts/bazel:java_rules.bzl", "gos_java_robot")

gos_java_robot(
    name = "Testboard",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "com.gos.testboard2020.Main",
    deps = [
        "//libraries/GirlsOfSteelLib",
        "@bazelrio//libraries/java/ctre/phoenix",
        "@bazelrio//libraries/java/wpilib/cameraserver",
        "@bazelrio//libraries/java/wpilib/cscore",
        "@bazelrio//libraries/java/wpilib/new_commands",
        "@bazelrio//libraries/java/wpilib/ntcore",
        "@bazelrio//libraries/java/wpilib/wpilibj",
    ],
)
