load("//build_scripts/bazel:java_rules.bzl", "gos_java_robot")

gos_java_robot(
    name = "OutreachBot",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "com.gos.outreach2021.Main",
    deps = [
        "//libraries/GirlsOfSteelLibRev",
        "@bazelrio//libraries/java/rev/sparkmax",
        "@bazelrio//libraries/java/wpilib/hal",
        "@bazelrio//libraries/java/wpilib/new_commands",
        "@bazelrio//libraries/java/wpilib/ntcore",
        "@bazelrio//libraries/java/wpilib/wpilibj",
        "@bazelrio//libraries/java/wpilib/wpimath",
        "@snobot_sim//jar",
    ],
)
