load("//build_scripts/bazel:java_rules.bzl", "gos_java_binary")
load("//build_scripts/bazel/shuffleboard:shuffleboard_widget.bzl", "shuffleboard_widget")

shuffleboard_widget(
    name = "ChargedUpDashboard",
    generation_config_file = ":dashboard.yml",
    package = "com.gos.chargedup.shuffleboard",
)

gos_java_binary(
    name = "SuperStructureMain",
    main_class = "com.gos.chargedup.shuffleboard.super_structure.SuperStructureStandaloneMain",
    tags = ["no-roborio"],
    runtime_deps = [":ChargedUpDashboard"],
)
