load("//build_scripts/bazel:java_rules.bzl", "gos_java_robot")

gos_java_robot(
    name = "Preseason2023",
    srcs = glob(["src/main/java/**/*.java"]),
    disable_checkstyle = True,
    main_class = "com.gos.preseason2023.Main",
    deps = [
        "@bazelrio//libraries/java/wpilib/new_commands",
        "@bazelrio//libraries/java/wpilib/wpilibj",
    ],
)
