load("//build_scripts/bazel:java_rules.bzl", "gos_java_robot")

gos_java_robot(
    name = "Preseason2023",
    srcs = glob(["src/main/java/**/*.java"]),
    disable_checkstyle = True,
    main_class = "com.gos.preseason2023.Main",
    deps = [
        "@bzlmodrio-allwpilib//libraries/java/wpilibNewCommands",
        "@bzlmodrio-allwpilib//libraries/java/wpilibj",
        "@bzlmodrio-revlib//libraries/java/revlib-java",
        "@maven//:org_snobotv2_snobot_sim_java_base",
        "@maven//:org_snobotv2_snobot_sim_java_navx",
        "@maven//:org_snobotv2_snobot_sim_java_revlib",
        "@maven//:org_snobotv2_snobot_sim_java_phoenix5",
        "@maven//:org_snobotv2_snobot_sim_java_phoenix6"
    ,
    ],
)
